# Backend_Main

./: .dockerignore  .gitignore  Dockerfile  LICENSE  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  readme.md  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: build.yml  chore.yml  docs.yml  feature.yml  fix.yml  refactor.yml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 19316f07bc9b_add_role_to_memeber.py  2fad6aceed57_add_project_invitation.py  636d8933146d_fix_projectmember_joined_at_column.py  9226ea9c0649_auto_initialization.py  a2d5453e6a58_member_project_notification_etc.py  a97f8719f6f8_update_member_field.py  b8d9756cef34_initialization.py  c608398ac840_drop_team.py  f1c30c5374e8_add_projectmember.py  f2f80280bd35_remove_works_useless_field.py
app/: main.py
app/core/: config.py  database.py  exception_handler.py  exceptions.py  logger.py  middleware.py  redis.py  security.py
app/modules/favorite/: dependencies.py  models.py  modules.py  repository.py  router.py  schemas.py  service.py
app/modules/member/: dependencies.py  models.py  modules.py  repository.py  router.py  schemas.py  service.py
app/modules/notice/: dependencies.py  models.py  modules.py  repository.py  router.py  schemas.py  service.py
app/modules/notification/: models.py
app/modules/project/: dependencies.py  models.py  modules.py  repository.py  router.py  schemas.py  service.py
app/modules/resource/: models.py  modules.py
app/modules/skill/: models.py  modules.py  repository.py  router.py  schemas.py  service.py
app/modules/team/: models.py  modules.py
app/modules/work/: dependencies.py  models.py  modules.py  repository.py  router.py  schemas.py  service.py
app/shared/: enums.py  schemas.py
app/static/: index.html  invite-accept.html  login.html  notice-create.html  notice-detail.html  password-reset.html  profile.html  project-create.html  project-detail.html  signup.html  style.css
docs/: git-convention.md  workflow.md
tests/: conftest.py
tests/skill/: test_repository.py  test_router.py  test_service.py
(+5 files in other folders)
